--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Todoly/PullToRefreshView"]
 	path = Todoly/PullToRefreshView
 	url = git://github.com/zman0900/PullToRefreshView.git
+[submodule "PullToRefresh"]
+	path = PullToRefresh
+	url = https://github.com/dhoerl/PullToRefresh.git
