--- a/Todoly/Todoly-Info.plist
+++ b/Todoly/Todoly-Info.plist
@@ -53,5 +53,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
